router/errLog.txt
sr_router.c: In function ‘sr_handle_arpreq’:
sr_router.c:179:13: warning: unused variable ‘interface’ [-Wunused-variable]
      char*  interface;
             ^
sr_router.c: In function ‘sr_forward_handler’:
sr_router.c:369:7: warning: passing argument 4 of ‘sr_forward_packet’ makes integer from pointer without a cast [enabled by default]
       sr_forward_packet(sr,packet,len,entryToUse->mac,outgoingInterface);
       ^
In file included from sr_router.c:22:0:
sr_router.h:83:6: note: expected ‘uint8_t’ but argument is of type ‘unsigned char *’
 void sr_forward_packet(struct sr_instance* sr,uint8_t *packet,unsigned int len,uint8_t macAddress,struct  sr_if *outgoingInterface);
      ^
sr_router.c: At top level:
sr_router.c:385:6: error: conflicting types for ‘sr_forward_packet’
 void sr_forward_packet(struct sr_instance* sr,
      ^
In file included from sr_router.c:22:0:
sr_router.h:83:6: note: previous declaration of ‘sr_forward_packet’ was here
 void sr_forward_packet(struct sr_instance* sr,uint8_t *packet,unsigned int len,uint8_t macAddress,struct  sr_if *outgoingInterface);
      ^
make: *** [sr_router.o] Error 1
